kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: go-webhook
  name: go-webhook
spec:
  selector:
    app: go-webhook
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
