kubernetes/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: go-webhook
  annotations:
    cert-manager.io/inject-ca-from: default/go-webhook
webhooks:
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURXRENDQWtDZ0F3SUJBZ0lSQUo3dit5bHNBcXM5aTBROGRROWh3cXN3RFFZSktvWklodmNOQVFFTEJRQXcKSVRFZk1CMEdBMVVFQXhNV1oyOHRkMlZpYUc5dmF5NWtaV1poZFd4MExuTjJZekFlRncweU1UQTVNVEl3TnpBMQpNekZhRncweU1URXlNVEV3TnpBMU16RmFNQ0V4SHpBZEJnTlZCQU1URm1kdkxYZGxZbWh2YjJzdVpHVm1ZWFZzCmRDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREJTek1ieVlFMHBQLzYKUlU3M29ITkI5MkRSVlUyQ2JqbFcyK090bTV3aGJYM08yVmhMZExYRDhha3hWSERpSEFNRUZIYnlZV2RkVjZGNgp4Mjg5c2MzMUpGMH [...]
    service:
      name: go-webhook
      path: /mutate
      port: 443
      namespace: default
  sideEffects: None
  admissionReviewVersions: ["v1"]
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values: ["kube-system"]
  failurePolicy: Ignore
  timeoutSeconds: 3
  name: go-webhook.default.svc.cluster.local
  rules:
  - apiGroups: ["*"]
    apiVersions: ["*"]
    operations:
    - CREATE
    - UPDATE
    resources:
    - configmaps
